[BRANDSR-8536] fix product title and thumbnail overlap on PDP

--- a/app/design/frontend/AmorePacific/sulwhasoo/Magento_Catalog/web/css/source/_module.less
+++ b/app/design/frontend/AmorePacific/sulwhasoo/Magento_Catalog/web/css/source/_module.less
@@ -1792,7 +1792,7 @@
         .product.media {
             width: 100%;
             max-width: 580px;
-            margin: 0 auto;
+            margin: 0 auto 0 30%;
         }
     }
 
